--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Azure\packages.config" />
+  <repository path="..\Todo.CommandHandlers\packages.config" />
+  <repository path="..\Todo.EventHandlers.ReadModel\packages.config" />
   <repository path="..\Todo.Web\packages.config" />
   <repository path="..\Todo.Worker\packages.config" />
 </repositories>
