--- a/Azure/Todo.Infrastructure.Azure.csproj
+++ b/Azure/Todo.Infrastructure.Azure.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandSender.cs" />
+    <Compile Include="EventBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableEntities\Event.cs" />
     <Compile Include="TableEntities\EventProvider.cs" />
