--- a/Todo.EventHandlers.ReadModel/Todo.EventHandlers.ReadModel.csproj
+++ b/Todo.EventHandlers.ReadModel/Todo.EventHandlers.ReadModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{18F76BF0-4439-4E01-897C-75A0509D07BF}</ProjectGuid>
+    <ProjectGuid>{6554CCB8-270C-44B7-9514-DCE2BFAA1E4A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Todo.Domain</RootNamespace>
-    <AssemblyName>Todo.Domain</AssemblyName>
+    <RootNamespace>Todo.EventHandlers.ReadModel</RootNamespace>
+    <AssemblyName>Todo.EventHandlers.ReadModel</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="StructureMap">
+      <HintPath>..\packages\structuremap.3.1.2.138\lib\net40\StructureMap.dll</HintPath>
+    </Reference>
+    <Reference Include="StructureMap.Net4">
+      <HintPath>..\packages\structuremap.3.1.2.138\lib\net40\StructureMap.Net4.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,16 +52,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityBase.cs" />
-    <Compile Include="Events\IEventHandler.cs" />
-    <Compile Include="Events\TodoListCreated.cs" />
-    <Compile Include="Events\IEvent.cs" />
-    <Compile Include="Infrastructure\IEventBus.cs" />
-    <Compile Include="Infrastructure\IEventProvider.cs" />
-    <Compile Include="Infrastructure\ILoadFromEvents.cs" />
-    <Compile Include="Infrastructure\IRepository.cs" />
-    <Compile Include="TodoList.cs" />
+    <Compile Include="ReadModelRegistry.cs" />
+    <Compile Include="ReadModelUpdater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TodoContext.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj">
+      <Project>{18F76BF0-4439-4E01-897C-75A0509D07BF}</Project>
+      <Name>Todo.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
