--- a/Todo.EventStore/Todo.EventStore.csproj
+++ b/Todo.EventStore/Todo.EventStore.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CB869D57-60CB-4E98-BE9B-25B0EBBC26DA}</ProjectGuid>
+    <ProjectGuid>{00ED2C58-0EEE-4B38-999D-083A38565ECE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Todo.CommandHandlers</RootNamespace>
-    <AssemblyName>Todo.CommandHandlers</AssemblyName>
+    <RootNamespace>Todo.EventStore</RootNamespace>
+    <AssemblyName>Todo.EventStore</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,12 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="StructureMap">
-      <HintPath>..\packages\structuremap.3.1.2.138\lib\net40\StructureMap.dll</HintPath>
-    </Reference>
-    <Reference Include="StructureMap.Net4">
-      <HintPath>..\packages\structuremap.3.1.2.138\lib\net40\StructureMap.Net4.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,27 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseCommandHandler.cs" />
-    <Compile Include="CreateTodoCommandHandler.cs" />
-    <Compile Include="CreateTodoListCommandHandler.cs" />
-    <Compile Include="ICommandHandler.cs" />
+    <Compile Include="IDomainRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SetCompletedCommandHandler.cs" />
-    <Compile Include="TransactionHandler.cs" />
-    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Todo.Command\Todo.Command.csproj">
-      <Project>{4697096C-BF4F-4220-8664-D24DD0EB2EB4}</Project>
-      <Name>Todo.Command</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj">
       <Project>{18F76BF0-4439-4E01-897C-75A0509D07BF}</Project>
       <Name>Todo.Domain</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
